# pandas-ai

./: .gitignore  CONTRIBUTING.md  LLM.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci-core.yml  ci-extensions.yml
docs/: README_CN.md  README_FR.md  README_JA.md  mint.json
docs/v2/: custom-response.mdx  examples.mdx  intro.mdx  llms.mdx  skills.mdx  train.mdx
docs/v2/pipelines/: pipelines.mdx
docs/v3/: agent.mdx  ai-dashboards.mdx  chat-and-output.mdx  cli.mdx  contributing.mdx  data-ingestion.mdx  getting-started.mdx  introduction.mdx  large-language-models.mdx  migration-guide.mdx  migration-v2-to-v3.mdx  overview-nl.mdx  permission-management.mdx  privacy-security.mdx  semantic-layer.mdx  share-dataframes.mdx  skills.mdx  smart-dataframes.mdx  smart-datalakes.mdx  transformations.mdx
examples/: data_platform_guide.ipynb  docker_sandbox.ipynb  quickstart.ipynb  semantic_layer_csv.ipynb  use_openai_llm.ipynb
pandasai/: __init__.py  config.py  constants.py
pandasai/agent/: base.py  state.py
pandasai/cli/: main.py
pandasai/data_loader/: duck_db_connection_manager.py  loader.py  local_loader.py  semantic_layer_schema.py  sql_loader.py  view_loader.py
pandasai/dataframe/: base.py
pandasai/helpers/: dataframe_serializer.py  json_encoder.py  optional.py  sql_sanitizer.py
pandasai/query_builders/: base_query_builder.py  paginator.py  sql_parser.py  sql_transformation_manager.py  view_query_builder.py
pandasai/skills/: __init__.py
tests/unit_tests/: test_cli.py  test_config.py  test_pandasai_init.py  test_pandasai_read_excel.py
(+71 files in other folders)
